Clean up core.async stuff